Add local endpoint through .env

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ DB_CONNECTION="user:password@tcp(localhost:3306)/database_name?charset=utf8&pars
 #
 # Logger
 LOG_LEVEL="debug"
+
+#
+# AUTH0 configurations
+AUTH0_BASE_URL="http://localhost:3333"
