--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-ENVIRONMENT="development"
+ENVIRONMENT="production"
+GIN_MODE="release"
 
 #
 # API Information
 API_TITLE="Boilerplate-API"
 API_VERSION="0.0.0"
-API_PORT=3000
+API_PORT=":3000"
 
 #
 # Database configurations
