Finish crud endpoints

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,8 @@
 			"type": "go",
 			"request": "launch",
 			"mode": "debug",
-			"program": "${workspaceRoot}"
+			"program": "${workspaceRoot}",
+			"env": {}
 		}
 		// {
 		// 	"name": "Launch",
