--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
 		"**/.hg": true,
 		"**/CVS": true,
 		"**/.DS_Store": true,
-		"**/tmp": true
+		"**/tmp": true,
+		"**/debug.test": true
 	},
 	"cSpell.ignorePaths": [
 		"**/go/src/github.com/**",
